Upd controllers and swagger
